Fix tagline misalignment (2)

--- a/styles/content.styl
+++ b/styles/content.styl
@@ -565,7 +565,7 @@
             top -1px
         else
             height 18px
-            vertical-align middle
+        vertical-align middle
         font-size 0
         time, /a.author
             font-size 0.75rem
@@ -800,6 +800,9 @@
             
             @media retina
                 background-image url('flairsheet2x')
+                
+            .link &
+                margin-top 1px
                 
         else
             margin 0
